Changed LICENSE type

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "LadipoMarket.com.ng Theme",
   "author": "Chigozie Orunta",
-  "license": "ISC",
+  "license": "GPL-2.0-or-later",
   "keywords": [
     "ladipo",
     "wordpress",
