--- a/.editorconfig
+++ b/.editorconfig
@@ -6,8 +6,9 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
+indent_size = 4
 
-[*.{json,yml,yaml}]
+[*.{json,yml,yaml,js}]
 indent_style = space
 indent_size = 2
 
