--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "composer install && npm install",
+    "start": "docker-compose up -d && open http://localhost:1111",
+    "launch": "open http://localhost:1111",
+    "watch": "gulp watch",
+    "compile": "gulp compile",
+    "lint": "npm-run-all --parallel lint:*",
+    "lint:php": "./vendor/bin/phpcs",
+    "lint:php:fix": "./vendor/bin/phpcbf",
+    "lint:css": "stylelint assets/**/*.css && stylelint assets/**/*.scss",
+    "lint:css:fix": "stylelint assets/**/*.css --fix && stylelint assets/**/*.scss --fix",
+    "lint:js": "npx eslint assets/**/*.js",
+    "lint:js:fix": "npx eslint --fix assets/**/*.js"
   },
   "keywords": [],
   "author": "",
