--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wordpress/eslint-plugin": "^14.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-sass": "^5.1.0",
+    "jquery": "^3.6.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-scss": "^4.0.6",
     "sass": "^1.58.3",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1"
